fixed wrapping problem for mobile.

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1,3 +1,9 @@
+.container {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+}
 .grid {
   display: block;
 }
